--- a/QSVT.ipynb
+++ b/QSVT.ipynb
@@ -2,12 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -51,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def W(a):\n",
@@ -78,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def S(phi):\n",
@@ -110,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def QSP(phi_vec, a):\n",
@@ -141,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def angles_from_W_to_R(phi_vec):\n",
@@ -166,15 +163,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/max/Downloads/Quantum Algorithms/lib/python3.11/site-packages/matplotlib/cbook.py:1762: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "/Users/max/Documents/Informatikstudium/6. Semester/Advanced Topics in Quantum Computing/Quantum-Singular-Value-Transformation/lib/python3.11/site-packages/matplotlib/cbook.py:1762: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  return math.isfinite(val)\n",
-      "/Users/max/Downloads/Quantum Algorithms/lib/python3.11/site-packages/matplotlib/cbook.py:1398: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "/Users/max/Documents/Informatikstudium/6. Semester/Advanced Topics in Quantum Computing/Quantum-Singular-Value-Transformation/lib/python3.11/site-packages/matplotlib/cbook.py:1398: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  return np.asarray(x, float)\n"
      ]
     },
@@ -217,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
@@ -267,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "def block_encode_square_matrix(A):\n",
@@ -291,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "def projector_from_state(state):\n",
@@ -316,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "def projector_rotation(P, phi):\n",
@@ -340,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "def QEVT(U, phi_vec):\n",
@@ -373,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
@@ -423,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
@@ -489,14 +486,14 @@
     "plt.plot(t_vec, accuracies)\n",
     "plt.axhline(epsilon, color='red', linestyle='--')\n",
     "plt.xlabel('time')\n",
-    "plt.title('Accuracy');\n",
+    "plt.title('Accuracy')\n",
     "\n",
     "#plot degree vs. time\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.plot(t_vec, degrees)\n",
     "plt.xlabel('time')\n",
     "plt.ylabel('polynomial degree')\n",
-    "plt.title('Cost scaling');\n",
+    "plt.title('Cost scaling')\n",
     "\n",
     "plt.tight_layout()"
    ],
@@ -522,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "def QSVT(U, PL, PR, phi_vec):\n",
@@ -575,13 +572,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "outputs": [
     {
      "data": {
       "text/plain": "Text(0.5, 1.0, 'Polynomial approximation to sign(x)')"
      },
-     "execution_count": 64,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -639,13 +636,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.legend.Legend at 0x12f572b50>"
+      "text/plain": "<matplotlib.legend.Legend at 0x13835b050>"
      },
-     "execution_count": 65,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
