--- a/QSVT.ipynb
+++ b/QSVT.ipynb
@@ -599,8 +599,8 @@
     "We are given access to an oracle $U$, which performs a phase flip on the marked state $m$:\n",
     "$$U \\vert j \\rangle =\n",
     "\\begin{cases}\n",
-    "    -\\vert j \\rangle & & \\vert j \\rangle = \\vert m \\rangle \\\\\n",
-    "    \\vert j \\rangle & & \\vert j \\rangle \\neq \\vert m \\rangle\n",
+    "    -\\vert j \\rangle & \\vert j \\rangle = \\vert m \\rangle \\\\\n",
+    "    \\vert j \\rangle & \\vert j \\rangle \\neq \\vert m \\rangle\n",
     "\\end{cases} $$\n",
     "For our initial state, we take the uniform superposition over all $N$ states:\n",
     "$$\\vert \\psi_0 \\rangle = \\frac 1 \\sqrt N \\sum ^ N_j \\vert j \\rangle = \\sqrt{\\frac {N - 1} N} \\vert m ^ \\perp \\rangle + \\frac 1 \\sqrt N \\vert m \\rangle$$\n",
