changed initial state and V of Grover's search

--- a/QSVT.ipynb
+++ b/QSVT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "def W(a):\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "def S(phi):\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "def QSP(phi_vec, a):\n",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "def angles_from_W_to_R(phi_vec):\n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "outputs": [
     {
      "data": {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "outputs": [
     {
      "data": {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "def block_encode_square_matrix(A):\n",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "def projector_from_state(state):\n",
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "def projector_rotation(P, phi):\n",
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "def QEVT(U, phi_vec):\n",
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "outputs": [
     {
      "data": {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "outputs": [
     {
      "name": "stdout",
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "outputs": [
     {
      "data": {
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "def QSVT(U, PL, PR, phi_vec):\n",
@@ -605,16 +605,14 @@
     "For our initial state, we take the uniform superposition over all $N$ states:\n",
     "$$\\vert \\psi_0 \\rangle = \\frac 1 \\sqrt N \\sum ^ N_j \\vert j \\rangle = \\sqrt{\\frac {N - 1} N} \\vert m ^ \\perp \\rangle + \\frac 1 \\sqrt N \\vert m \\rangle$$\n",
     "Our goal now is to map $\\vert \\psi_0 \\rangle$ to $\\vert m \\rangle$. As seen above, $\\vert \\psi_0 \\rangle$ has a nonzero projection on the final state $\\vert m \\rangle$. Using $\\Pi := \\vert m \\rangle \\langle m \\vert$, this condition is equivalent to: $$\\Pi V \\vert \\psi_0 \\rangle = a \\vert m \\rangle$$\n",
-    "with $V$ as the identity and $a = \\frac 1 \\sqrt N$. For general amplitude amplification problems, $V$ doesn't need to be trivial, as it's later the case with our implementation. With $\\Pi'$ as $\\vert \\psi_0 \\rangle \\langle \\psi_0 \\vert$, this equation becomes: $$ \\Pi V \\Pi' = a \\vert m \\rangle \\langle \\psi_0 \\vert\n",
+    "with $V$ as the identity and $a = \\frac 1 \\sqrt N$. For general amplitude amplification problems, $V$ does not need to be trivial. For instance, we can also use the zero state as our initial state. In this scenario, $V$ needs to be $H ^ {\\otimes n}$, which ultimately yields the same result. Returning to our choice for the initial state and $V$, with $\\Pi'$ as $\\vert \\psi_0 \\rangle \\langle \\psi_0 \\vert$, the above equation becomes: $$ \\Pi V \\Pi' = a \\vert m \\rangle \\langle \\psi_0 \\vert\n",
     "$$\n",
     "What we just did is we block-encoded the singular value $a$ into a unitary. The next step is to polynomially transform $a$. Since there is only one singular value, our problem reduces to mapping $a$ as close to 1 as possible. The obvious choice for this is to apply the sign function. $$\\theta(x - c) = \\begin{cases}\n",
     "    -1 & x < c \\\\\n",
     "    0 & x = c \\\\\n",
     "    1 & x > c  \\\\\n",
     "\\end{cases} $$\n",
-    "The $erf(k[x - c])$ gives us an arbitrarily good approximation for large enough k. Outside the region $(c - \\Delta, c + \\Delta)$ the error is bounded by $\\epsilon$. In our case $\\frac \\Delta 2$ needs to be $\\leq \\frac 1 \\sqrt N$, because we want to map $a = \\frac 1 \\sqrt N$ to a value greater than $1 - \\epsilon$. The degree $d$ of this approximation is $\\mathcal{O}(\\frac 1 \\Delta log(\\frac 1 \\epsilon)) = \\mathcal{O}(\\frac 1 \\sqrt N log(\\frac 1 \\epsilon))$ and since the number of gates scales with $d$, the algorithmic complexity, as with the standard Grover algorithm, is $\\mathcal{O}(\\sqrt N)$. Because the error function's magnitude is bounded by 1, and it has odd parity, it meets the conditions of the QSP Theorem and can be implemented by QSVT.\n",
-    "\n",
-    "In the subsequent implementation, $V$ is not the identity matrix, and the initial state is not the uniform superposition over all $N$ states. We use $V = H ^ {\\otimes n}$ and the zero state as our the initial state, which is equivalent."
+    "The $erf(k[x - c])$ gives us an arbitrarily good approximation for large enough k. Outside the region $(c - \\Delta, c + \\Delta)$ the error is bounded by $\\epsilon$. In our case $\\frac \\Delta 2$ needs to be $\\leq \\frac 1 \\sqrt N$, because we want to map $a = \\frac 1 \\sqrt N$ to a value greater than $1 - \\epsilon$. The degree $d$ of this approximation is $\\mathcal{O}(\\frac 1 \\Delta log(\\frac 1 \\epsilon)) = \\mathcal{O}(\\frac 1 \\sqrt N log(\\frac 1 \\epsilon))$ and since the number of gates scales with $d$, the algorithmic complexity, as with the standard Grover algorithm, is $\\mathcal{O}(\\sqrt N)$. Because the error function's magnitude is bounded by 1, and it has odd parity, it meets the conditions of the QSP Theorem and can be implemented by QSVT."
    ],
    "metadata": {
     "collapsed": false
@@ -622,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "outputs": [
     {
      "data": {
@@ -683,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "outputs": [
     {
      "data": {
@@ -704,10 +702,9 @@
     "for qubits in num_qubits:\n",
     "    N = 2 ** qubits\n",
     "\n",
-    "    #inital all zero state\n",
-    "    all_zero_state = np.zeros(N)\n",
-    "    all_zero_state[0] = 1\n",
-    "    PR = projector_from_state(all_zero_state)\n",
+    "    #inital equally weighted state\n",
+    "    psi_zero = (1 / (N ** 0.5)) * np.ones(N)\n",
+    "    PR = projector_from_state(psi_zero)\n",
     "\n",
     "    #soltuion state m\n",
     "    m = np.zeros(N)\n",
@@ -715,7 +712,7 @@
     "    PL = projector_from_state(m)\n",
     "\n",
     "    #signal rotation operator U\n",
-    "    U = reduce(np.kron, [HADAMARD] * qubits)\n",
+    "    U =  np.eye(N)\n",
     "\n",
     "    #approximating the error function and finding the corresponding QSVT angles\n",
     "    with io.capture_output() as captured:\n",
@@ -727,7 +724,7 @@
     "    U_phi = QSVT(U, PL, PR, phi_vec)\n",
     "\n",
     "    #real part of the amplified amplitude of a\n",
-    "    amplitude = (m @ U_phi @ all_zero_state).real\n",
+    "    amplitude = (m @ U_phi @ psi_zero).real\n",
     "\n",
     "    amplitudes.append(amplitude)\n",
     "\n",
@@ -782,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "outputs": [],
    "source": [],
    "metadata": {
