--- a/QSVT.ipynb
+++ b/QSVT.ipynb
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "outputs": [
     {
      "data": {
@@ -712,7 +712,7 @@
     "    PL = projector_from_state(m)\n",
     "\n",
     "    #signal rotation operator U\n",
-    "    U =  np.eye(N)\n",
+    "    V =  np.eye(N)\n",
     "\n",
     "    #approximating the error function and finding the corresponding QSVT angles\n",
     "    with io.capture_output() as captured:\n",
@@ -721,10 +721,10 @@
     "        phi_vec = angles_from_W_to_R(phi_vec)\n",
     "\n",
     "    #constructing the QSVT sequence\n",
-    "    U_phi = QSVT(U, PL, PR, phi_vec)\n",
+    "    V_phi = QSVT(V, PL, PR, phi_vec)\n",
     "\n",
     "    #real part of the amplified amplitude of a\n",
-    "    amplitude = (m @ U_phi @ psi_zero).real\n",
+    "    amplitude = (m @ V_phi @ psi_zero).real\n",
     "\n",
     "    amplitudes.append(amplitude)\n",
     "\n",
