corrected spelling mistakes

--- a/QSVT.ipynb
+++ b/QSVT.ipynb
@@ -25,7 +25,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "a# Quantum Singular Value Transformation (QSVT)\n",
+    "# Quantum Singular Value Transformation (QSVT)\n",
     "This notebook is primarily based on the paper \"Grand Unification of Quantum Algorithms\" [1] and the blog post \"Introduction to Quantum Singular Value Transformation\" [2], which I also recommended for further details. As of today, there are three key quantum algorithms: search, factoring, and simulation. Although they seemingly don't have much in common, all of them can be unified as instances of the **quantum singular value transformation algorithm**. So, how do you construct an algorithm using QSVT? Here are the four main steps you need to take:\n",
     "1. Create a function $f(x)$ representing your problem, which is applied to the singular values of a matrix $A \\mapsto f(A)$\n",
     "2. Block-encode your matrix $A$ into a unitary $U$ $$U = \\begin{bmatrix} A & \\cdot \\\\ \\cdot & \\cdot \\end{bmatrix} $$\n",
@@ -34,7 +34,7 @@
     "Don't worry if this doesn't immediately make sense, we'll go through each step except constructing polynomial approximations, and then proceed with two examples: Grover's search and Hamiltonian Simulation. As QSVT essentially provides a framework for transforming matrices that are embedded in larger unitary matrices, let us begin with the simplest case of applying a polynomial to a scalar $a$ encoded inside a 2x2 matrix, a process known as Quantum Signal Processing.\n",
     "\n",
     "## Quantum Signal Processing (QSP)\n",
-    "With QSP you want to polynomial transform a Signal $a$. This is achieved by interleaving two different kinds of single-qubit rotations. For this we need two operators.\n",
+    "With QSP you want to polynomially transform a Signal $a$. This is achieved by interleaving two different kinds of single-qubit rotations. For this we need two operators.\n",
     "The first one is the **signal rotation operator W**, which encodes the signal $a$ into a matrix and performs an x-rotation by angle $\\theta = -2 cos ^ {-1} a$ through the Bloch Sphere.\n",
     "For a fixed value $a \\in [-1, 1]$, the operator is defined as:\n",
     "$$ W(a) = \\begin{bmatrix}\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "There are different options for choosing the signal rotation and signal rotation processing operators, but all are equally powerful. For the signal rotation operator, we use the W-convention. Another commonly used one is the R-convention, which defines the signal rotation operator as follows:\n",
+    "There are different options for choosing the signal rotation and signal-processing rotation operators, but all are equally powerful. For the signal rotation operator, we use the W-convention. Another commonly used one is the R-convention, which defines the signal rotation operator as follows:\n",
     "$$ R(a) = \\begin{bmatrix}\n",
     "a & \\sqrt{1 - a ^ 2} \\\\\n",
     "\\sqrt{1 - a ^ 2} & -a\n",
@@ -411,7 +411,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Now that we have polynomials that accurately approximate our desired functions, we will implement QEVT for Hamiltonian simulation. We will examine how this algorithm scales with time and analyze the behavior of the error."
+    "Now that we have polynomials that accurately approximate our desired functions, we will implement QEVT for Hamiltonian simulation and analyze the behavior of the error over time."
    ],
    "metadata": {
     "collapsed": false
@@ -553,10 +553,10 @@
    "source": [
     "## Quantum Singular Value Transformation (QSVT)\n",
     "Finally, we arrive at QSVT. The major difference from QEVT is that we now allow any matrix to be polynomially transformed, regardless of its dimensions. This means that we can no longer use the eigenvalues $\\lambda$ for transformation, as not every matrix has them. Instead, we use the singular values $\\sigma$ because every matrix can be decomposed as $A = W \\Sigma V^\\dagger$, with $W$ and $V$ being the left and right singular vector spaces, and  $\\Sigma$ being a diagonal matrix of singular values. We again encode $A$ into an unitary $U$: $$U = \\begin{bmatrix} A & \\cdot \\\\ \\cdot & \\cdot \\end{bmatrix} $$\n",
-    "To access $A$, we now need two different projectors, $\\Pi$ and $\\overset{\\sim}{\\Pi}$, because the left and right singular space are usually not equal. $A$ is then $\\Pi U \\overset{\\sim}{\\Pi}$.\n",
+    "To access $A$, we now need two different projectors, $\\Pi$ and $\\overset{\\sim}{\\Pi}$, because the left and right singular space are usually not equal. $A$ is then $\\overset{\\sim}{\\Pi} U \\Pi$.\n",
     "Our QSVT operation sequence $U_{\\vec{\\phi}}$ also becomes more complicated because we need to distinguish between even and odd polynomials. The sequence for odd degree $d$ polynomials starts in the right singular vector space and ends in the left singular vector space, whereas the even $d$ sequence starts and ends in the right singular vector space.\n",
     "$$U_{\\vec{\\phi}} = \\begin{cases} \\Bigg[ \\prod ^ {d / 2}_{k = 1} \\Pi_{\\phi_{2k - 1}} U(A)^\\dagger \\overset{\\sim}{\\Pi}_{\\phi_{2k}} U(A) \\Bigg] \\Pi_{\\phi_{d + 1}} & \\text{for d even} \\\\ \\overset{\\sim}{\\Pi}_{\\phi_{1}} \\Bigg[ \\prod ^ {(d - 1) / 2}_{k = 1} \\Pi_{\\phi_{2k}} U(A)^\\dagger \\overset{\\sim}{\\Pi}_{\\phi_{2k + 1}} U(A) \\Bigg] \\Pi_{\\phi_{d + 1}} & \\text{for d odd} \\end{cases} = \\begin{bmatrix} Poly(A) & \\cdot \\\\ \\cdot & \\cdot \\end{bmatrix}$$\n",
-    "Here, $Poly(A)$ is defined as $\\sum^r_{k = 1} Poly(\\sigma_k) \\vert w_k \\rangle \\langle v_k \\vert$ for an odd polynomial and $\\sum^r_{k = 1} Poly(\\sigma_k) \\vert v_k \\rangle \\langle v_k \\vert$ for an even one, with $r$ being the $rank$ of $A$. With QEVT these two cases simplified to one because, for a Hamiltonian, $U$ and $U^\\dagger$ are the same.\n",
+    "Here, $Poly(A)$ is defined as $\\sum^r_{k = 1} Poly(\\sigma_k) \\vert w_k \\rangle \\langle v_k \\vert$ for an odd polynomial and $\\sum^r_{k = 1} Poly(\\sigma_k) \\vert v_k \\rangle \\langle v_k \\vert$ for an even one, with $r$ being the $rank$ of $A$. With QEVT these two cases simplified to one, because for a Hamiltonian, $U$ and $U^\\dagger$ are the same.\n",
     "\n",
     "For simplicity reasons, the following code still only uses square matrices as mentioned above, even though QSVT works for all dimensions of matrices."
    ],
